# DirectVisualServoing

./: README.md  README.txt
defocus-direct-visual-servoing/: CMakeLists.txt  cameraAndRobot.h  defocusDirectVisualServoing.cpp
defocus-direct-visual-servoing/src/: CCameraThinLensParameters.cpp  CCameraThinLensParameters.h  CFeatureDefocusedLuminance.cpp  CFeatureDefocusedLuminance.h  CImageFilter.cpp  CImageFilter.h
direct-visual-servoing/: CMakeLists.txt
photometric-visual-servoing/: CMakeLists.txt  cameraAndRobot.h  captureAndSaveDesired.cpp  photometricVisualServoing.cpp  photometricVisualServoingOnly.cpp
photometric-visual-servoing-build/: photometricVisualServoing
src/: ._C_Staubli.cpp
src/Camera/: CamFlirFlyCapture.hpp  CamFlirSpinnaker.hpp  CamuEye.cpp  CamuEye.h  CamuEyeException.cpp  CamuEyeException.h
src/Robot/: C_Staubli.cpp  C_Staubli.h  C_UR.cpp  C_UR.h
